@@ -1,5 +1,10 @@
 2011-09-03 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/SDCCmain.c:
+	  Basic working z180 port.
+
+2011-09-03 Philipp Klaus Krause <pkk AT spth.de>
+
 	* configure.in,
 	  configure,
 	  sdccconf_in.h,
